[gd_scene load_steps=4 format=3 uid="uid://ctwkjuxnuv17a"]

[ext_resource type="Texture2D" uid="uid://gc0ek3hxq0ov" path="res://assets/Sprites/bullets.png" id="1_lrrtt"]
[ext_resource type="Script" uid="uid://dy21086iv3bkv" path="res://assets/Levels/bullets.gd" id="2_yy1g5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1see"]
size = Vector2(8, 0.750001)

[node name="Bullets" type="Sprite2D"]
position = Vector2(4, 4)
texture = ExtResource("1_lrrtt")
script = ExtResource("2_yy1g5")

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerJumpArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerJumpArea2D"]
position = Vector2(0, -2.931)
scale = Vector2(1, 5.295)
shape = SubResource("RectangleShape2D_q1see")
debug_color = Color(0, 0.536843, 0.968922, 0.42)

[node name="PlayerDeathArea2D" type="Area2D" parent="."]
position = Vector2(0, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeathArea2D"]
position = Vector2(0, -0.499374)
scale = Vector2(1, 1.335)
shape = SubResource("RectangleShape2D_q1see")
debug_color = Color(0.965986, 1.44392e-06, 0.483331, 0.42)

[node name="DisableTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="body_entered" from="PlayerJumpArea2D" to="." method="_on_player_jump_area_2d_body_entered"]
[connection signal="body_entered" from="PlayerDeathArea2D" to="." method="_on_player_death_area_2d_body_entered"]
